# tpmc

./: .gitignore  .travis.yml  CMakeLists.txt  FindTpmc.cmake  LICENSE.txt  MANIFEST.in  Makefile.am  README  README.md  README.rst  TODO  configure.ac  dune-mc.pc.in  dune.module  setup.py  tpmc-config
cmake/modules/: CMakeLists.txt  DuneMcMarcros.cmake  FindSFML.cmake  Makefile.am
doc/: Makefile.am  center_and_root_vertex_maple.mw
doc/cases/: case10_1_2.vtk  case10_2_inv.vtk  case12_1_2.vtk  case12_2_inv.vtk  case13_2.vtk  case13_5_1_inv.vtk  case3_2_inv.vtk  case4_2.vtk  case4_2_inv.vtk  case6_1_2.vtk  case7_2_inv.vtk  case7_4_1.vtk  case7_4_1_inv.vtk  cube.vtk
doc/doxygen/: .gitignore  Doxylocal
doc/tests/: test-documentation.tex
dune/: CMakeLists.txt  Makefile.am
dune/marchingcubes/: .gitignore  CMakeLists.txt  Makefile.am  aberthfunctor.hh  isdegenerated.hh  marchingcubes.cc  marchingcubes.hh  marchingcubesrefinement.hh  marchingcubestables.cc  marchingcubestables.hh  marchingcubesvtkwriter.hh  marchinglut.cc  marchinglut.hh  newtonfunctor.hh  testmc33.cc  thresholdfunctor.cc  thresholdfunctor.hh  trilinearfunction.hh
dune/marchingcubes/doc/cases/: case10_1_2_inv.vtk  case10_2.vtk  case12_1_2_inv.vtk  case12_2.vtk  case13_2_inv.vtk  case13_3.vtk  case13_3_inv.vtk  case13_4.vtk  case13_4_inv.vtk  case13_5_1.vtk  case3_2.vtk  case6_1_2_inv.vtk  case7_2.vtk  case7_3.vtk  case7_3_inv.vtk
dune/marchingcubes/gui/: Makefile.am  ctlpanel.hh  geometries.hh  geometrycontainer.hh  geometrypanel.hh  geometryparser.hh  mainframe.hh  marchingcubescontainer.hh  marchingcubesgui.hh  mccanvas.hh  origincenteredcamera.hh  planecanvas.hh  python.hh  triangulation.hh  wxsfmlcanvas.h
dune/marchingcubes/lut/: .gitignore  CMakeLists.txt  Makefile.am  consistencycheck.py  generate_lut.py  marchinglut.hh  referenceelements.py  vtk.py
dune/marchingcubes/lut/doc/: .gitignore  test-documentation.tex
dune/marchingcubes/lut/lutgen/: base_case_triangulation.py  binaryheap.py  cases.py  coordinates.py  disambiguate.py  dunecode.py  generator.py  geomobj.py  output.py  permutation.py  polygon.py  referenceelements.py  sk.py  test.py  transformation.py  vtk.py
dune/marchingcubes/lut/lutgen/sk/: .gitignore
dune/marchingcubes/test/: .gitignore  CMakeLists.txt  Makefile.am  test_mc33.cc  testmarchingcubesnormals.cc  testmarchingcubesrefinement.cc  testmc33.cc
dune/marchingcubes/test/common/: utilities.hh
gui/: .gitignore  Makefile.am  boundinggrid.hh  dune_mc_gui.cc  geometries.hh  geometrycontainer.hh  geometrypanel.hh  geometryparser.hh  glshapes.hh  mainframe.hh  marchingcubescontainer.hh  marchingcubesgui.hh  mccanvas.hh  origincenteredcamera.hh  planefunctor.hh  python.hh  referencegrid.hh  trilinearfunctor.hh  viewpanel.hh  wxsfmlcanvas.cpp
lib/: CMakeLists.txt  Makefile.am
m4/: CMakeLists.txt  Makefile.am  dune-mc.m4
tpmc/: __init__.py  __version__.py  aberthfunctor.hh  isdegenerated.hh
tpmc/include/tpmc/: aberthfunctor.hh  fieldtraits.hh  floatcmp.hh  geometrytype.hh  marchingcubes.hh  marchingcubes_impl.hh  marchingcubestables.cc  marchingcubestables.hh  marchinglut.hh  newtonfunctor.hh  referenceelements.hh  thresholdfunctor.hh  univariatepolynomial.hh
tpmc/lut/: generate_lut.py  marchinglut.hh
tpmc/lut/lutgen/: base_case_triangulation.py  cases.py  consistencycheck.py  coordinates.py  disambiguate.py  dunecode.py  generator.py  geomobj.py  output.py  permutation.py  polygon.py  referenceelements.py  sk.py  test.py  transformation.py  vtk.py
tpmc/src/: aberthfunctor.cc  geometrytype.cc  marchingcubestables.cc  referenceelements.cc
