# $Id: duneproject 5370 2008-11-15 17:43:24Z christi $

SUBDIRS = lut test gui

include $(top_srcdir)/am/global-rules

marchingcubesincludedir = $(includedir)/dune/marchingcubes
marchingcubesinclude_HEADERS = isdegenerated.hh marchingcubes.hh	\
                               marchingcubesrefinement.hh \
	thresholdfunctor.hh

