# $Id: duneproject 5370 2008-11-15 17:43:24Z christi $

SUBDIRS = lut test

include $(top_srcdir)/am/global-rules

marchingcubesincludedir = $(includedir)/dune/marchingcubes
marchingcubesinclude_HEADERS = aberthfunctor.hh \
                               isdegenerated.hh \
                               marchingcubes.cc \
                               marchingcubes.hh \
                               marchingcubesrefinement.hh \
                               newtonfunctor.hh \
                               thresholdfunctor.hh \
                               trilinearfunction.hh \
                               univariatepolynomial.hh
